--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,30 @@
-body{
+
+*{
   margin:0;
   padding:0;
   box-sizing:border-box;
 }
-
 .add-button{
   opacity:0;
   position:absolute;
+}
+body{
+  font-size:12px;
+}
+nav div.nav-wrapper{
+  background:#9C27B0;
+}
+nav div.nav-wrapper a.brand-logo {
+  
+  font-size:2rem;
+  font-family: 'Poppins', sans-serif;
+}
+nav div.nav-wrapper a.brand-logo img{
+  position:relative ;
+  width:40px;
+ top:8px;
+  margin-right:-10px;
+}
+nav div.nav-wrapper a.searchBtn{
+  margin-right:15px;
 }
