--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,13 @@
 body{
   font-size:12px;
   scroll-behavior:contain;
+  background:rgba(255,255,255);
 }
-
+nav{
+  position:fixed;
+  top:0;
+  z-index:10;
+}
 nav div.nav-wrapper{
   background:#9C27B0;
 }
@@ -27,7 +32,7 @@ nav div.nav-wrapper a.brand-logo img{
 }
 
 nav div.nav-wrapper .searchBtn{
-  margin-right:15px;
+  margin-right:18px;
 }
 
 .sidenav .user-view{
@@ -83,4 +88,52 @@ nav div.nav-wrapper .searchBtn{
   bottom:0;
   right:0;
   margin:20px;
+  background:rgb(80,80,80);
+  z-index:10;
+}
+
+main{
+  margin-top: 50px;
+  padding:21px;
+}
+main .card .card-image{
+  height:150px;
+}
+main .card .card-content a{
+  padding:10px 0px;
+  color:#9C27B0;
+}
+main .card .card-content a:nth-child(1){
+  margin-right:15px;
+}
+main .card .card-content a i{
+  position: relative ;
+  top:7px;
+  margin-right:5px;
+}
+main .card .card-content .card-title{
+  font-weight: bold ;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+ }
+
+main .card .card-content .moreBtn{
+  position:absolute ;
+  top:178px;
+  right:15px;
+}
+main .card .card-reveal .card-title{
+  line-height:27px;
+  margin-bottom:20px;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+}
+main .card .card-reveal .closeBtn{
+  position:absolute ;
+  right:20px;
+  top:25px;
 }
