--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ nav{
   z-index:10;
 }
 nav div.nav-wrapper{
-  background:#9C27B0;
+  background:#7E57C2;
 }
 
 nav div.nav-wrapper a.brand-logo {
@@ -56,7 +56,7 @@ nav div.nav-wrapper .searchBtn{
 }
 
 .sidenav .user-view .userInfo span{
-  color:#6A1B9A;
+  color:#7E57C2;
 }
 
 .sidenav .user-view .background img{
@@ -101,7 +101,7 @@ main .card .card-image{
 }
 main .card .card-content a{
   padding:10px 0px;
-  color:#9C27B0;
+  color:#7E57C2;
 }
 main .card .card-content a:nth-child(1){
   margin-right:15px;
