--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body{
   font-size:12px;
-  overscroll-behavior-y: none;
+  overscroll-behavior-x: none;
   background:rgba(255,255,255);
 }
 nav{
