--- a/css/style.css
+++ b/css/style.css
@@ -21,21 +21,44 @@ nav div.nav-wrapper{
 
 nav div.nav-wrapper a.brand-logo {
   font-size:2rem;
+  transition:all 0.6s ease-in;
   font-family: 'Poppins', sans-serif;
 }
-
+nav .nav-wrapper .brand-logo span{
+  transition :all 0.6s ease-in ;
+}
 nav div.nav-wrapper a.brand-logo img{
   position:relative;
   width:40px;
   top:8px;
   margin-left:-5px;
-  margin-right: -13px;
+  margin-right: -7px;
 }
 
 nav div.nav-wrapper .searchBtn{
   margin-right:18px;
 }
 
+nav .nav-wrapper form input{
+  opacity:0;
+  position:fixed;
+  top:13px;
+  right:47px;
+  color:#777;
+  height:30px!important;
+  font-weight:bold;
+  padding:0px 5px!important;
+  border-bottom:none!important;
+  transition:all 0.5s ease-in!important;
+  text-align:right;
+  background:#fff!important;
+  border-radius:80px!important;
+}
+
+nav .nav-wrapper form input:focus{
+  
+  box-shadow:none!important;
+}
 .sidenav .user-view{
   display:flex;
   align-items: center ;
