--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
 nav{
   position:fixed;
   top:0;
+  opacity:0;
   z-index:10;
   filter:blur(3px);
   transition: all 0.1s ease-in ;
@@ -20,6 +21,8 @@ nav div.nav-wrapper{
 }
 
 nav div.nav-wrapper a.brand-logo {
+  font-weight:sans-serif;
+  color:#fff;
   font-size:2rem;
   transition:all 0.6s ease-in;
   font-family: 'Poppins', sans-serif;
@@ -206,6 +209,7 @@ main .horizontal .card-image img{
   transition: all 0.1s ease-in;
   padding:0px 21px 11px 21px;
   filter:blur(3px);
+  opacity:0;
 }
 .loader .row:nth-child(3){
   margin:0!important;
