--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,8 @@ body{
 nav{
   position:fixed;
   top:0;
-  opacity:0;
   z-index:10;
   filter:blur(3px);
-  transition: all 0.1s ease-in ;
 }
 nav div.nav-wrapper{
   background:#7E57C2;
@@ -23,8 +21,9 @@ nav div.nav-wrapper{
 nav div.nav-wrapper a.brand-logo {
   font-weight:sans-serif;
   color:#fff;
+  opacity:0;
   font-size:2rem;
-  transition:all 0.6s ease-in;
+  transition:all 0.3s ease-in;
   font-family: 'Poppins', sans-serif;
 }
 nav .nav-wrapper .brand-logo span{
@@ -37,9 +36,14 @@ nav div.nav-wrapper a.brand-logo img{
   margin-left:-5px;
   margin-right: -7px;
 }
-
+nav .nav-wrapper .menuIcon{
+  opacity:0;
+  transition:all 0.3s ease-in;
+}
 nav div.nav-wrapper .searchBtn{
   margin-right:18px;
+  opacity:0;
+  transition:all 0.3s ease-in;
 }
 
 nav .nav-wrapper form input{
