--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ nav{
   position:fixed;
   top:0;
   z-index:10;
-  filter:blur(3px);
 }
 nav div.nav-wrapper{
   background:#7E57C2;
@@ -212,7 +211,7 @@ main .horizontal .card-image img{
   margin-top:-5px;
   transition: all 0.1s ease-in;
   padding:0px 21px 11px 21px;
-  filter:blur(3px);
+  
 }
 .loader .row:nth-child(3){
   margin:0!important;
@@ -232,7 +231,7 @@ main .horizontal .card-image img{
   width:100%;
   height:100vh;
   background:rgba(0,0,0, 0.4);
-  opacity:0.3;
+  opacity:1;
   z-index:1000;
 }
 @keyframes scaleX{
@@ -305,4 +304,40 @@ main .horizontal .card-image img{
 
 #loginForm .row .gll{
   background:#d44638;
+}
+
+.swal-button--cancel:focus{
+  background:#eee;
+  color:#777;
+}
+.swal-button--confirm{
+  color:#fff;
+  background:#7E57C2!important;
+} 
+.swal-button--confirm:focus{
+  color:#fff;
+  background:#7E57C2;
+}
+.swal-button--cancel{
+  background:#eee;
+  color:#777;
+}
+.swal-text{
+  text-align:justify;
+  padding:0 25px;
+}
+
+.swal-icon.swal-success {
+  border-color: red !important;
+}
+
+.swal-icon--success{
+  border-color :#7E57C2;
+}
+.swal-icon--success__line{
+  background:#7E57C2;
+}
+.swal-icon--success__ring{
+  border-color :#7E57C2 ;
+  opacity:0.6;
 }
